WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308181
[YARR] Skip dead errorCodePoint check in JIT backreference loop for non-Unicode patterns
https://bugs.webkit.org/show_bug.cgi?id=308181
Summary
[YARR] Skip dead errorCodePoint check in JIT backreference loop for non-Unico...
Sosuke Suzuki
Reported
2026-02-18 16:55:51 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Sosuke Suzuki
Comment 1
2026-02-18 16:56:48 PST
Pull request:
https://github.com/WebKit/WebKit/pull/58965
EWS
Comment 2
2026-02-20 02:19:47 PST
Committed
307900@main
(314bda38516d): <
https://commits.webkit.org/307900@main
> Reviewed commits have been landed. Closing PR #58965 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-02-20 02:20:11 PST
<
rdar://problem/170791314
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug